--- a/todo.html
+++ b/todo.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="todo.css">
     </head>
     <body>
-        <h1>Todo App</h1>
+        <h1>Todo WebApp</h1>
         <input type="text" placeholder="Enter your Task">
         <button>Add</button>
         <ul>
